PRF-802: fixed the issue of icons and text are not aligned.

--- a/src/main/webapp/src/scss/main/minisite/foxtel-now/components/card.scss
+++ b/src/main/webapp/src/scss/main/minisite/foxtel-now/components/card.scss
@@ -27,8 +27,8 @@
     cursor: pointer;
     .foxtel-now-card--myaccount__content {
         >img {
-            width: 71px;
-            height: auto;
+            width: 80px;
+            height: 80px;
         }
         >p {
             text-align: center;
